src/components/Accordion/accordion.scss
.sb-accordion {
  position: relative;
  width: 100%;
  color: $sb-dark-blue;
  background: $white;

  &:last-child {
    border-bottom: 1px solid $light;
  }

  &:first-child .sb-accordion__button {
    border-top-width: 0;
  }
}

.sb-accordion__title {
  overflow: hidden;
  max-width: 80%;
  margin-left: 2px;
  line-height: normal;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.sb-accordion--open {
  &:hover {
    background: $light-25;
  }

  &:hover .sb-accordion__button {
    color: $sb-dark-blue;
    background: $light-25;
  }

  .sb-accordion__button {
    border-bottom-color: transparent;
  }
}

.sb-accordion__content {
  overflow: hidden;
  box-sizing: border-box;
  width: 100%;
  padding: $small-size $medium-size $medium-size $large-size;
  will-change: height;
}

.sb-accordion__button {
  display: flex;
  align-items: center;
  box-sizing: border-box;
  width: 100%;
  height: auto;
  max-height: 48px;
  margin: 0;
  padding: 7px 6px;
  font-size: $font-14;
  font-weight: $font-weight-medium;
  text-align: left;
  background: $white;
  border: 0;
  border-top: 1px solid $light;
  cursor: pointer;

  &:hover {
    color: $sb-green;
  }

  .sb-icon {
    flex-shrink: 0;
  }
}

.sb-accordion__icon {
  display: none;
  margin-left: auto;
}

.sb-accordion:hover .sb-accordion__icon {
  display: block;
}

.sb-accordion--no-highlight {
  &.sb-accordion--open {
    background: transparent;

    &:hover .sb-accordion__button {
      color: $sb-dark-blue;
      background: transparent;
    }
  }
}

.sb-accordion--no-padding {
  .sb-accordion__content {
    padding-left: $small-size;
    padding-right: 0;
  }
}

.sb-accordion--no-border {
  border-color: transparent;

  .sb-accordion__button,
  &:last-child {
    border-color: transparent;
  }
}

